OO-8542: adding new layout to various pages